<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JW stand отчет</string>
    <string name="app_name_shot">JW_stand</string>
    <string name="db_name">"jw_stand_report.sqlite3"</string>
    <string name="db_version">"1"</string>


    <string name="user">"Фамилия и Имя"</string>
    <string name="date">"Дата служения"</string>
    <string name="time">"Время служения"</string>
    <string name="from">"С:"</string>
    <string name="to">"До:"</string>
    <string name="location">"Точка служения"</string>
    <string name="journals">"Журналы"</string>
    <string name="broshures">"Брошюры"</string>
    <string name="books">"Книги"</string>
    <string name="dvd">"DVD"</string>
    <string name="talks">"Беседы"</string>
    <string name="repeated_visits">"Повторные посещения"</string>
    <string name="blank">"S43"</string>
    <string name="profile">"Ваш профиль"</string>
    <string name="meeting">"Собрание"</string>
    <string name="settings">"Настройки"</string>

    <string name="send_data">Данные для отправки отчета</string>
    <string name="sms">"Номер телефона - получателя"</string>
    <string name="email">"E-mail получателя"</string>

    <string name="exit">"Выход"</string>
    <string name="statistic">"Статистика"</string>

    <string name="first_run_title">"Первый запуск программы"</string>
    <string name="first_run_text">"Это ваш первый запуск программы. Пожалуйста сначало настройте программу!"</string>

    <string name="sms_send">"Отправка СМС"</string>
    <string name="sms_send_ok">"СМС отправлено!"</string>
    <string name="error_generic_failture">"Неизвестная ошибка! Попробуйте повторно через некоторое время."</string>
    <string name="error_modul_is_down">"Ваш телефон выключен!"</string>
    <string name="error_no_cervice">"Связь не доступна!"</string>
    <string name="error_null_pdu">"Неверный текст сообщения!"</string>

    <string name="vrong">"Вы заполнили не все данные!"</string>
    <string name="sms_vrong">"Не корректный номер телефона"</string>
    <string name="email_vrong">"Не корректный e-mail"</string>
    <string name="sms_sending">"Отправка СМС"</string>
    <string name="email_sending">"Отправка E-mail"</string>
    <string name="sms_text">"Текст сообщения:"</string>
    <string name="sms_count">"Количество СМС:"</string>
    <string name="send_settings">"Настройка отправки"</string>
    <string name="send_type">"Способ отправки"</string>

    <string name="type_sms">"СМС"</string>
    <string name="type_email">"E-mail"</string>
    <string name="any">"Разное"</string>
    <string name="analytics">"Отчеты о работе программы"</string>

    <string name="statistic_write">"Сохранить данные для статистики?"</string>

    <string name="plus">"+"</string>
    <string name="minus">"-"</string>

    <string name="send">"Отправить"</string>
    <string name="save">"Сохранить"</string>

    <string name="test_time">"00:00"</string>
    <string name="test_date">"0000–00–00"</string>
    <string name="test_phone">"380931234567"</string>
    <string name="test_ziro">"0"</string>
    <string name="test_email">"name@email.com"</string>

    <string-array name="send_report">
        <item>"Только через СМС"</item>
        <item>"Только через e-mail"</item>
        <item>"Всегда спрашивать"</item>
    </string-array>

    <integer-array name="send_report_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </integer-array>

    <string name="PhoneNumber_Format">Номер телефона (%s)</string>
    <string name="EmailAddress_Format">Email (%s)</string>

</resources>
