<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/profile">
        <EditTextPreference
            android:key="user"
            android:title="@string/user" />

        <EditTextPreference
            android:key="meeting"
            android:title="@string/meeting" />

        <ListPreference
            android:key="location"
            android:title="@string/location" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/send_settings">
        <ListPreference
            android:defaultValue="3"
            android:entries="@array/send_report"
            android:entryValues="@array/send_report_value"
            android:key="send_type"
            android:title="@string/send_type" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/send_data">
        <EditTextPreference
            android:key="sms"
            android:title="@string/sms" />

        <EditTextPreference
            android:key="email"
            android:title="@string/email" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/any">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="analytics"
            android:title="@string/analytics" />
    </PreferenceCategory>


</PreferenceScreen>