<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">>

            <TextView
                android:id="@+id/textView0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/accent"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meeting"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/accent"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/meeting"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size" />

            <View
                android:id="@+id/hr1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/line_margin"
                android:background="@color/hr_color" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/line_margin"
                android:text="@string/location"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/accent"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold|italic" />

            <Spinner
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/line_margin"
                android:text="@string/send_settings"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/accent"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold|italic" />

            <Spinner
                android:id="@+id/send_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:entries="@array/send_report"
                android:entryValues="@array/send_report_value" />

            <View
                android:id="@+id/hr2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/line_margin"
                android:background="@color/hr_color" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/accent"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/sms"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/accent"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size" />

            <CheckBox
                android:id="@+id/analytics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/line_margin"
                android:text="@string/analytics" />

            <Button
                android:id="@+id/save"
                style="@style/button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/line_margin"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>