<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".MyActivity">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/user"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView1"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/user"
                android:layout_marginTop="@dimen/line_margin"
                android:text="@string/date"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/date"
                style="@style/button_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="@dimen/line_margin"
                android:gravity="center"
                android:padding="@dimen/line_margin"
                android:text="0000-00-00" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/date"
                android:layout_marginTop="@dimen/line_margin"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold|italic" />


            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="@dimen/line_margin"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/line_margin"
                android:paddingTop="@dimen/line_margin">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/line_margin"
                    android:text="@string/from"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/time_start"
                    style="@style/button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/line_margin"
                    android:text="00:00" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/line_margin"
                    android:text="@string/to"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/time_end"
                    style="@style/button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/line_margin"
                    android:text="00:00" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/LinearLayout1"
                android:layout_marginTop="@dimen/line_margin"
                android:text="@string/location"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold|italic" />

            <Spinner
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView6" />

            <LinearLayout
                android:id="@+id/LinearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/location"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/journals"
                    android:textStyle="bold|italic" />


                <Button
                    android:id="@+id/button_down1"
                    style="@style/button_blue"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus" />

                <EditText
                    android:id="@+id/journals"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="0" />

                <Button
                    android:id="@+id/button_up1"
                    style="@style/button_blue"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plus" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/LinearLayout2"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/broshures"
                    android:textStyle="bold|italic" />


                <Button
                    android:id="@+id/button_down2"
                    style="@style/button_blue"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus" />

                <EditText
                    android:id="@+id/broshure"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="0" />

                <Button
                    android:id="@+id/button_up2"
                    style="@style/button_blue"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plus" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/LinearLayout3"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/books"
                    android:textStyle="bold|italic" />


                <Button
                    android:id="@+id/button_down3"
                    style="@style/button_blue"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus" />

                <EditText
                    android:id="@+id/books"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="0" />

                <Button
                    android:id="@+id/button_up3"
                    style="@style/button_blue"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plus" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/LinearLayout4"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dvd"
                    android:textStyle="bold|italic" />


                <Button
                    android:id="@+id/button_down4"
                    style="@style/button_blue"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus" />

                <EditText
                    android:id="@+id/dvd"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="0" />

                <Button
                    android:id="@+id/button_up4"
                    style="@style/button_blue"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plus" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/LinearLayout5"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/talks"
                    android:textStyle="bold|italic" />


                <Button
                    android:id="@+id/button_down5"
                    style="@style/button_blue"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus" />

                <EditText
                    android:id="@+id/talks"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="0" />

                <Button
                    android:id="@+id/button_up5"
                    style="@style/button_blue"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plus" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LinearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/LinearLayout6"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/repeated_visits"
                    android:textStyle="bold|italic" />


                <Button
                    android:id="@+id/button_down6"
                    style="@style/button_blue"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus" />

                <EditText
                    android:id="@+id/repeated_visits"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="0" />

                <Button
                    android:id="@+id/button_up6"
                    style="@style/button_blue"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plus" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/LinearLayout7"
                android:layout_marginBottom="@dimen/line_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/blank"
                    android:textStyle="bold|italic" />

                <Button
                    android:id="@+id/button_down7"
                    style="@style/button_blue"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus" />

                <EditText
                    android:id="@+id/s43"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="0" />

                <Button
                    android:id="@+id/button_up7"
                    style="@style/button_blue"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plus" />
            </LinearLayout>

            <Button
                android:id="@+id/send"
                style="@style/button_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/LinearLayout8"
                android:layout_marginTop="@dimen/line_margin"
                android:text="Отправить" />


        </RelativeLayout>
    </ScrollView>
</LinearLayout>